--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<header>
     <h1>Vai ser uma imagem aqui </h1>
-</body>
+    <ul><li>Estudante</li>
+        <li>Escola</li>
+    </ul>
+</header>
 </html>
